# Central64

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  doxygen.config
.github/workflows/: cla.yml
analysis/: AnalyzeBenchmarks.cpp  AnalyzeBenchmarks.hpp  main.cpp
examples/: HighLevelDemo.cpp  HighLevelDemo.hpp  LowLevelDemo.cpp  LowLevelDemo.hpp  MidLevelDemo.cpp  MidLevelDemo.hpp  PrintNeighborhoods.cpp  PrintNeighborhoods.hpp  TestScenarios.cpp  TestScenarios.hpp  main.cpp
include/central64/: PathPlanner.hpp  index.md
include/central64/grid/: Array2D.hpp  Connections.hpp  Grid2D.hpp  Neighborhood.hpp  Offset2D.hpp  PathCost.hpp  PathCount.hpp  Types.hpp
include/central64/io/: MovingAIGrids.hpp
include/central64/search/: AStarSearch.hpp  AbstractSearch.hpp  BasicSearch.hpp  JumpPointSearch.hpp  MixedAStarSearch.hpp  MixedJumpPointSearch.hpp  MixedSearch.hpp  PathFlow.hpp  PathTree.hpp
include/central64/smoothing/: AbstractSmoothing.hpp  GreedySmoothing.hpp  NoSmoothing.hpp  TentpoleSmoothing.hpp
report/: 00-index.md  01-introduction.md  02-grids.md  03-paths.md  04-search-methods.md  05-all-nodes-search-methods.md  06-library-design.md  07-experiment-design.md  08-search-results.md  09-all-nodes-search-results.md  10-findings-and-recommendations.md  11-references.md  12-appendix.md  central64-technical-report.md  generate-pdf-source.py  settings.json
results/: 00-run-examples.py  01-run-partial-analyses.py  02-run-complete-analyses.py  03-process-complete-analyses.py  analysis-dijkstra-complete-dao.txt  analysis-dijkstra-partial-dao-arena-111.txt  analysis-dijkstra-partial-dao-arena.txt  analysis-dijkstra-partial-dao-arena2.txt  analysis-dijkstra-partial-dao-ost000a.txt  analysis-heuristic-complete-dao.txt  analysis-heuristic-partial-dao-arena-111.txt  analysis-heuristic-partial-dao-arena.txt  analysis-heuristic-partial-dao-arena2.txt  analysis-heuristic-partial-dao-ost000a.txt  examples.txt  table-dijkstra-dao-Bounded-Canonical-Dijkstra-Search.md  table-dijkstra-dao-Canonical-Dijkstra-Search.md  table-dijkstra-dao-Dijkstra-Search.md  table-dijkstra-dao-Mixed-Canonical-Dijkstra-Search.md  table-dijkstra-dao-Mixed-Dijkstra-Search.md  table-heuristic-dao-A-Star-Search.md  table-heuristic-dao-Bounded-Jump-Point-Search.md  table-heuristic-dao-Jump-Point-Search.md  table-heuristic-dao-Mixed-A-Star-Search.md  table-heuristic-dao-Mixed-Jump-Point-Search.md
